tests/miniJava/pos/001243_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( java ) java [ 0 ] = 0 ; } }
