tests/miniJava/neg/004847_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( static { return 0 ; } }
